--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ownerNumber": "6283834558105@s.whatsapp.net", 
-    "ownerName": "Lexxy Official", 
-    "botName": "Neobot",
-    "footer": "© BOTMD | 2022", 
+    "ownerNumber": "6285691890852@s.whatsapp.net", 
+    "ownerName": "Idam Ganteng🗿", 
+    "botName": "IdamBotz-MD",
+    "footer": "© IdamBotz-MD | 2022", 
     "sessionName": "session", 
     "pathimg": "./media/logo.jpg", 
     "pathqris": "./media/qris.jpg",
@@ -11,7 +11,7 @@
     "limitGame": 35,
     "gamewaktu": 90,
     "sticker": {
-        "packname": "© Store",
-        "author": "Lexxy Official"
+        "packname": "© IdamBotz-MD",
+        "author": "Idam Official"
     }
 }
